@@ -1,5 +1,5 @@
 Package: oligoClasses
-Version: 1.9.27
+Version: 1.9.28
 Title: Classes for high-throughput arrays supported by oligo
 Author: Benilton Carvalho <bcarvalh@jhsph.edu> and Robert Scharpf <rscharpf@jhsph.edu>
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu> 
@@ -21,9 +21,11 @@ Collate:  AllClasses.R
           AllGenerics.R
           functions.R
           initialize-methods.R
+	  methods-eSet.R	
           methods-AlleleSet.R
           methods-FeatureSet.R
 	  methods-oligoSnpSet.R
+	  methods-CopyNumberSet.R
 	  methods-CNSet.R
           methods-PDInfo.R
 	  methods-SnpSet.R
