@@ -1,0 +1,12 @@
+setMethod("copyNumber", "CopyNumberSet", function(object) assayData(object)[["copyNumber"]])
+
+setReplaceMethod("copyNumber", signature(object="CopyNumberSet", value="matrix"),
+                 function(object, value){
+			 assayDataElementReplace(object, "copyNumber", value)
+		 })
+
+setMethod("cnConfidence", "CopyNumberSet", function(object) assayData(object)[["cnConfidence"]])
+setReplaceMethod("cnConfidence", signature(object="CopyNumberSet", value="matrix"),
+                 function(object, value){
+			 assayDataElementReplace(object, "cnConfidence", value)
+                 })
